[package]
name = "chrono_gpst"
version = "0.1.3"
edition = "2021"
authors = ["Brian Moran <dev@moran.network>"]
license = "MIT"
description = "chrono conversion utils for GPS Time (GPST)."
readme = "./README.md"
homepage = "https://github.com/moranbw/chrono_gpst"
repository = "https://github.com/moranbw/chrono_gpst"
keywords = ["time", "timezone", "geospatial", "gps"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4"
thiserror = "2"
